# DustyShock

./: .gitignore  CMakeLists.txt  cells_shock.c  cells_shock.cpp  cells_shock.h  cells_shock.hpp  common_use.c  common_use.cpp  common_use.h  common_use.hpp  explicit_shock.c  explicit_shock.cpp  explicit_shock.h  explicit_shock.hpp  gas_shock.c  gas_shock.cpp  gas_shock.h  gas_shock.hpp  main.c  main.cpp  monaghan_shock.cpp  monaghan_shock.h  plot_tmp.gnuplot  plot_tmp1.gnuplot
